--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
                 <version>${spring-boot.version}</version>
                 <configuration>
                     <mainClass>com.mofari.coveragecollector.CoverageCollectorApplication</mainClass>
-                    <skip>true</skip>
+                    <skip>false</skip>
                 </configuration>
                 <executions>
                     <execution>
